--- a/package.json
+++ b/package.json
@@ -10,39 +10,47 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@supabase/supabase-js": "^2.39.3",
-    "@supabase/ssr": "^0.1.0",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-label": "^2.0.2",
+    "@ai-sdk/anthropic": "^3.0.15",
+    "@google-cloud/vision": "^5.3.4",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "tesseract.js": "^5.0.4",
-    "jspdf": "^2.5.1",
-    "lucide-react": "^0.454.0",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@react-email/components": "^1.0.4",
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.3",
+    "@vercel/blob": "^2.0.0",
+    "ai": "^6.0.39",
+    "canvas-confetti": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.3",
+    "jspdf": "^2.5.1",
+    "lucide-react": "^0.454.0",
+    "next": "^15.1.3",
+    "pdf-lib": "^1.17.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-dropzone": "^14.2.3",
+    "react-email": "^5.2.5",
+    "resend": "^6.7.0",
+    "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "framer-motion": "^11.0.3",
-    "react-dropzone": "^14.2.3",
-    "sonner": "^1.3.1",
-    "canvas-confetti": "^1.9.2",
-    "zod": "^3.22.4"
+    "tesseract.js": "^5.0.4",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@types/canvas-confetti": "^1.6.4",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.3.3",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.33",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-config-next": "^15.1.3",
-    "@types/canvas-confetti": "^1.6.4"
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3"
   }
 }
