--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "canvas-confetti": "^1.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^11.0.3",
     "jspdf": "^2.5.1",
     "lucide-react": "^0.454.0",
