--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gratisschadeverhalen",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Gratis verhalen van materiële autoschade - WA tegenpartij claims",
   "private": true,
   "scripts": {
@@ -17,8 +17,10 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@react-email/components": "^1.0.4",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
