security: Add admin role verification to protect dashboard and API
CRITICAL: Previously any authenticated user could access /dashboard/admin. Now requires ADMIN_EMAILS env var. Includes test scripts and manual checklist.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# 🔒 ADMIN ACCESS (REQUIRED!)
+# Comma-separated list of admin email addresses
+# These users can access /dashboard/admin and /api/admin/* endpoints
+ADMIN_EMAILS=your-email@example.com
+
 # Google Analytics 4
 # Get your GA4 Measurement ID from: https://analytics.google.com/
 # Format: G-XXXXXXXXXX
