--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.2.3",
     "react-email": "^5.2.5",
-    "resend": "^6.7.0",
+    "resend": "4.0.1",
     "sonner": "^1.3.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
