feat: Add Google Review Request email system
- Add database schema for review_email_sent_at tracking
- Add cron job /api/cron/review-request (daily 10:00 UTC)
- Add review request email template in Dutch
- Add vercel.json cron configuration
- Add env vars: ENABLE_REVIEW_REQUEST_SYSTEM, GOOGLE_REVIEW_URL
- Sends review request 24-72 hours after claim completion

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,18 @@ ANTHROPIC_API_KEY=your_anthropic_key
 
 # App URL
 NEXT_PUBLIC_APP_URL=https://autoschadebureau.nl
+
+# Cron Jobs Security
+# Generate a random secret: openssl rand -base64 32
+CRON_SECRET=your_cron_secret_here
+
+# 📧 Review Request System (Google Reviews)
+# Enable automatic review request emails after successful claims
+ENABLE_REVIEW_REQUEST_SYSTEM=false
+# Your Google Business Profile review URL
+# Find it: Google Maps > Your business > Share > "Ask for reviews"
+GOOGLE_REVIEW_URL=https://g.page/r/YOUR_PLACE_ID/review
+
+# 📧 Follow-up System (Reminders to insurers)
+# Enable automatic follow-up reminders for claims > 14 days
+ENABLE_FOLLOW_UP_SYSTEM=false
