feat: Add WordPress headless CMS integration, SchadeScan tool, and SEO improvements
- Add WordPress REST API client library (lib/wordpress/)
- Add SchadeScan lead generation tool (/schadescan)
- Add 'Wanneer heeft u ons nodig?' section on homepage
- Add Verhaalrechtsbijstand blog article
- Add Rechtsbijstandverzekering blog article
- Expand Intermediairs page with 10 FAQs and case studies
- Add WordPress setup documentation

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,8 @@ GOOGLE_REVIEW_URL=https://g.page/r/YOUR_PLACE_ID/review
 # 📧 Follow-up System (Reminders to insurers)
 # Enable automatic follow-up reminders for claims > 14 days
 ENABLE_FOLLOW_UP_SYSTEM=false
+
+# 📝 WordPress Headless CMS
+# URL van je WordPress installatie (zonder trailing slash)
+# Laat leeg om hardcoded blog content te gebruiken
+WORDPRESS_API_URL=https://autoschadebedrijf.nl
